# crystal_sort

./: LICENSE  README.md  crystal_sort.py  pigeonhole_optimization_comparison.ipynb  pyproject.toml
benchmark/: comparison.ipynb  crystal_sort.py  pigeonhole_optimization.md
benchmark and comparison/: README.md  benchmark_comp.ipynb  crystal_sort.py  pigeonhole_optimization_comparison.ipynb  results_100_runs_100_100.csv  sort_collection.py
crystal_sort/: __init__.py  crystal_sort.py
pigeonhole_optimization/: comparison.ipynb  crystal_sort_pigeonhole.py  pigeonhole_optimization.md
tests/: test_crystal_sort.py
